--- a/MauiTempoAgora/MauiTempoAgora.csproj
+++ b/MauiTempoAgora/MauiTempoAgora.csproj
@@ -59,14 +59,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="Docs\**" />
+	  <Compile Remove="Docs\**" />
+	  <EmbeddedResource Remove="Docs\**" />
+	  <MauiCss Remove="Docs\**" />
+	  <MauiXaml Remove="Docs\**" />
+	  <None Remove="Docs\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Docs\" />
 	</ItemGroup>
 
 </Project>
